# dutchmate-dictionary

./: Cargo.toml  Dockerfile  Readme.md
src/: conjugation.rs  dictionary.rs  main.rs
