[package]
name = "dutchmate-dictionary"
version = "0.1.0"
edition = "2018"

[[bin]]
name = "app"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
select = "*"
scraper = "*"
prettytable-rs = "*"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1"
serde = { version = "1.0", features = ["derive"]}
rocket = "0.5.0-rc.1"
simple-error="0.2.3"